--- a/basic-format.css
+++ b/basic-format.css
@@ -1,7 +1,15 @@
 /* variables */
 
 /* reset */
-
+body,p,a,ul,li{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+li{
+  list-style-type: none;
+}
 /* base styles */
 
 /* fonts */
