--- a/basic-format.css
+++ b/basic-format.css
@@ -18,15 +18,21 @@ li{
 
 /* small tablet styles */
 @media screen and (min-width: 620px){
-  
+    body{
+    font-size: 18px;
+  }
 }
 
 /* large tablet & laptop styles */
 @media screen and (min-width: 960px){
-
+  body{
+    font-size: 20px;
+  }
 }
 
 /* desktop styles */
 @media screen and (min-width: 1200px){
-
+   body{
+    font-size: 22px;
+  }
 }
